# schannel-demo

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config  config.toml
schannel-client/: Cargo.toml
schannel-client/src/: main.rs
schannel-eapp/: Cargo.toml  Makefile  build.rs
schannel-eapp/src/: main.rs
schannel-host/: Cargo.toml  Makefile
schannel-host/.cargo/: config
schannel-host/src/: main.rs
schannel-lib/src/: lib.rs
