cargo-features = ["per-package-target"]

[workspace]
members = [
    "schannel-lib",
    "schannel-client",
    "schannel-host",
    "schannel-eapp",
]
resolver = "2"

[workspace.package]
version      = "0.3.0"
edition      = "2021"
authors      = ["Markku Kylänpää <markku.kylanpaa@vtt.fi>"]
repository   = "https://github.com/vector-sdk/schannel-demo"
readme       = "README.md"
license      = "MIT"
description  = "Rust schannel demo for Keystone Enclaves"

[profile.dev]
opt-level = 1
debug = false

[profile.release]
opt-level = 1
debug = false
