cargo-features = ["per-package-target"]

[package]
name                    = "schannel-client"
version.workspace       = true
edition.workspace       = true
authors.workspace       = true
repository.workspace    = true
readme.workspace        = true
license.workspace       = true
description             = ""
default-target          = "riscv64gc-unknown-linux-gnu"

[dependencies]
static-dh-ecdh = "0.1.1"
rand           = "0.8.5"
sha2           = "0.10.2"
aes            = "0.8.1"

[dependencies.schannel-lib]
path = "../schannel-lib"

